# quota-dash

./: .gitignore  404.html  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  config.example.toml  index.html  mkdocs.yml  pyproject.toml  run.sh  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
architecture/: index.html
changelog/: index.html
contributing/: index.html
docs/: architecture.md  changelog.md  contributing.md  index.md
docs/guides/: getting-started.md  ghostty.md  proxy-guide.md  pypi-setup.md
docs/plans/: 2026-03-21-ghostty-integration.md  2026-03-21-open-source-productization.md  2026-03-21-provider-expansion.md  2026-03-21-proxy-data-source.md  2026-03-21-realtime-monitoring.md  2026-03-21-ui-ux-redesign.md
docs/specs/: 2026-03-21-code-quality.md  2026-03-21-feature-polish.md  2026-03-21-ghostty-integration.md  2026-03-21-open-source-productization.md  2026-03-21-provider-expansion.md  2026-03-21-proxy-data-source-design.md  2026-03-21-realtime-monitoring.md  2026-03-21-ui-ux-redesign.md
guides/getting-started/: index.html
guides/ghostty/: index.html
guides/proxy-guide/: index.html
guides/pypi-setup/: index.html
plans/2026-03-21-ghostty-integration/: index.html
plans/2026-03-21-open-source-productization/: index.html
plans/2026-03-21-provider-expansion/: index.html
plans/2026-03-21-proxy-data-source/: index.html
plans/2026-03-21-realtime-monitoring/: index.html
plans/2026-03-21-ui-ux-redesign/: index.html
search/: search_index.json
tests/: test_app.py  test_cli.py  test_config.py  test_doctor.py  test_error_handling.py  test_export.py  test_fixes.py  test_ghostty_alerts.py  test_ghostty_colors.py  test_ghostty_detect.py  test_i18n.py  test_log_parser.py  test_models.py  test_plugins.py  test_predictor.py  test_providers.py  test_providers_new.py  test_proxy_app.py  test_proxy_app_extended.py  test_proxy_daemon.py  test_proxy_db.py  test_proxy_handler.py  test_proxy_parser.py  test_proxy_parser_google.py  test_proxy_streaming.py  test_store.py  test_watcher.py  test_widgets.py
(+48 files in other folders)
