[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quota-dash"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.80.0",
    "httpx>=0.27.0",
    "click>=8.1.0",
]

[project.scripts]
quota-dash = "quota_dash.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/quota_dash"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23.0"]
