[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quota-dash"
version = "0.5.0"
description = "Multi-provider LLM quota monitoring TUI dashboard targeting Ghostty"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "sooneocean"}
]
keywords = ["llm", "quota", "dashboard", "tui", "textual", "ghostty", "openai", "anthropic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
dependencies = [
    "textual>=0.80.0",
    "httpx>=0.27.0",
    "click>=8.1.0",
    "tomli-w>=1.0.0",
    "starlette>=0.40.0",
    "uvicorn>=0.30.0",
    "aiosqlite>=0.20.0",
    "watchfiles>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/sooneocean/quota-dash"
Repository = "https://github.com/sooneocean/quota-dash"
Issues = "https://github.com/sooneocean/quota-dash/issues"

[project.scripts]
quota-dash = "quota_dash.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/quota_dash"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]
docs = ["mkdocs-material>=9.0"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true
